--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     価格:<input type="number" name="price" id="price">
     <button id="register">登録</button>
     <ol id="fruitslist"> </ol>
+    <canvas id="cvs"></canvas>
     <script src="js/main.js"></script>
+    <script src="js/canvas.js"></script>
 </body>
 
 </html>
